# oo7

./: .gitignore  Cargo.toml  LICENSE  README.md  coverage.sh  deny.toml  org.freedesktop.Secrets.xml
.github/: dependabot.yml
.github/workflows/: CI.yml  codespell.yml  coverage.yml  deploy.yml  docs.yml  python.yml  typos.yml
cargo-credential/: Cargo.toml  README.md
cargo-credential/src/: main.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
client/: Cargo.toml  README.md
client/examples/: basic.rs  basic_2.rs  dbus_service.rs  file_tracing.rs  schema.rs
client/fixtures/: default.keyring  legacy.keyring
client/src/: error.rs  key.rs  keyring.rs  lib.rs  mac.rs  migration.rs  secret.rs
client/src/crypto/: error.rs  mod.rs  native.rs  openssl.rs
client/src/dbus/: algorithm.rs  collection.rs  error.rs  item.rs  mod.rs  service.rs
client/src/dbus/api/: collection.rs  item.rs  mod.rs  prompt.rs  properties.rs  secret.rs  service.rs  session.rs
client/src/file/: error.rs  item.rs  locked_item.rs  locked_keyring.rs  mod.rs  secret.rs  unlocked_item.rs  unlocked_keyring.rs
client/src/file/api/: attribute_value.rs  encrypted_item.rs  legacy_keyring.rs  mod.rs
client/src/portal/: error.rs  item.rs  mod.rs  secret.rs
client/src/portal/api/: attribute_value.rs  legacy_keyring.rs  mod.rs
client/tests/: dbus_collection.rs  dbus_item.rs  dbus_service.rs  file_unlocked_keyring.rs  keyring.rs  schema.rs
daemon/: Cargo.toml
daemon/src/: main.rs
daemon/src/service/: collection.rs  item.rs  mod.rs  service.rs  session.rs
examples/: basic.rs  basic_2.rs
gobject/: Cargo.toml  meson.build
gobject/src/: error.rs  ffi_wrappers.rs  item.rs  keyring.rs  lib.rs  oo7.h
gobject/tests/: test_keyring.c
keyring-util/: Cargo.toml
keyring-util/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
pam/: Cargo.toml  README.md  meson.build  meson_options.txt
pam/src/: ffi.rs  lib.rs  meson.build  protocol.rs  socket.rs
portal/: Cargo.toml  README.md  meson.build  meson_options.txt
portal/data/: meson.build  oo7-portal.desktop.in  oo7-portal.portal  oo7-portal.portal.in  oo7-portal.service  oo7-portal.service.in  org.freedesktop.impl.portal.desktop.oo7.service.in
portal/src/: error.rs  main.rs  meson.build  request.rs
python/: Cargo.toml  README.md  oo7.pyi  pyproject.toml  requirements-dev.txt
python/.cargo/: config.toml
python/src/: lib.rs
python/tests/: test_keyring.py
server/: Cargo.toml  README.md  meson.build
server/data/: meson.build  oo7-daemon.service.in  org.freedesktop.secrets.service.in
server/po/: POTFILES.in  meson.build
server/src/: capability.rs  collection.rs  error.rs  i18n.rs  item.rs  main.rs  meson.build  pam_listener.rs  prompt.rs  prompter.rs  prompter_callback.rs  secret_exchange.rs  service.rs  service_manager.rs  session.rs  tests.rs
server/src/collection/: mod.rs  tests.rs
server/src/daemon/: collection.rs  error.rs  item.rs  mod.rs  prompt.rs  prompter.rs  secret.rs  secret_exchange.rs  service.rs  service_manager.rs  session.rs
server/src/gnome/: mod.rs  prompter.rs  secret_exchange.rs
server/src/gnome/crypto/: mod.rs  native.rs  openssl.rs
server/src/item/: mod.rs  tests.rs
server/src/pam_listener/: mod.rs  tests.rs
server/src/plasma/: mod.rs  prompter.rs
server/src/prompt/: mod.rs  tests.rs
server/src/service/: mod.rs  tests.rs
src/: algorithm.rs  bin.rs  collection.rs  crypto.rs  error.rs  helpers.rs  item.rs  key.rs  keyring.rs  lib.rs  migration.rs  prompt.rs  secret.rs  service.rs  session.rs  utils.rs
src/crypto/: native.rs  openssl.rs
src/dbus/: algorithm.rs  collection.rs  error.rs  item.rs  mod.rs  prompt.rs  service.rs  session.rs  utils.rs
src/dbus/api/: collection.rs  item.rs  mod.rs  prompt.rs  properties.rs  secret.rs  service.rs  session.rs
src/portal/: attribute_value.rs  encrypted_item.rs  error.rs  helpers.rs  item.rs  keyring.rs  mod.rs  secret.rs
src/portal/api/: attribute_value.rs  encrypted_item.rs  item.rs  mod.rs
src/portal/keyring/: attribute_value.rs  item.rs  mod.rs
tests/: keyring.rs
