[workspace]
resolver = "2"

members = [
 "cargo-credential",
  "client",
  "cli",
  "portal",
  "server",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Bilal Elmoussaoui", "Sophie Herold", "Maximiliano Sandoval"]
keywords = ["keyring", "secret", "service", "portal", "keychain"]
categories = ["os::linux-apis", "os", "api-bindings"]
repository = "https://github.com/bilelmoussaoui/oo7"
homepage = "https://github.com/bilelmoussaoui/oo7"
license = "MIT"
rust-version = "1.80"
exclude = ["org.freedesktop.Secrets.xml"]

[workspace.dependencies]
zvariant = { version = "5.5", default-features = false, features = ["gvariant"]}
ashpd = {version = "0.11", default-features = false}
endi = "1.1"
clap = { version = "4.5", features = [ "cargo", "derive" ] }
futures-channel = "0.3"
futures-lite = "2.6"
futures-util = "0.3"
oo7 = { path = "client", version = "0.4", default-features = false, features = ["unstable", "tracing"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", default-features = false }
tempfile = "3.19"
tracing = "0.1"
tracing-subscriber = "0.3"
zbus = { version = "5.5", default-features = false }
zbus_macros = {version = "5.5", features = ["gvariant"]}
zeroize = { version = "1", features = ["zeroize_derive"] }
