[workspace]
resolver = "3"

members = [
  "cargo-credential",
  "client",
  "cli",
  "macros",
  "pam",
  "portal",
  "python",
  "server",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
authors = ["Bilal Elmoussaoui", "Sophie Herold", "Maximiliano Sandoval"]
keywords = ["keyring", "secret", "service", "portal", "keychain"]
categories = ["os::linux-apis", "os", "api-bindings"]
repository = "https://github.com/bilelmoussaoui/oo7"
homepage = "https://github.com/bilelmoussaoui/oo7"
license = "MIT"
rust-version = "1.86"
exclude = ["org.freedesktop.Secrets.xml"]

[workspace.dependencies]
zvariant = { version = "5.8", default-features = false, features = ["gvariant", "serde_bytes"]}
ashpd = {version = "0.12", default-features = false}
endi = "1.1"
clap = { version = "4.5", features = [ "cargo", "derive" ] }
futures-channel = "0.3"
futures-lite = "2.6"
futures-util = "0.3"
num-bigint-dig = { version = "0.8", features = ["zeroize"] }
oo7 = { path = "client", version = "0.6", default-features = false, features = ["unstable", "tracing"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", default-features = false }
tempfile = "3.24"
tracing = "0.1"
tracing-subscriber = "0.3"
zbus = { version = "5.13.2", default-features = false }
zbus_macros = {version = "5.11", features = ["gvariant"]}
zeroize = { version = "1", features = ["zeroize_derive"] }
