[package]
name = "cargo-credential-oo7"
description = "Cargo credential provider using oo7"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
cargo-credential = "0.4"
oo7 = {workspace = true, features = ["tokio"]}
tokio = {workspace = true, features = ["rt-multi-thread"]}

[features]
default = ["native_crypto"]
native_crypto = [
    "oo7/native_crypto"
]
openssl_crypto = [
    "oo7/openssl_crypto"
]
