[package]
name = "oo7-cli"
description = "System keyring access from the terminal"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["alloc", "clock"] }
clap.workspace = true
oo7.workspace = true
rpassword = "7.2.0"
tokio = { workspace = true, features = [ "macros", "rt-multi-thread" ] }
