[package]
name = "oo7-cli"
description = "System keyring access from the terminal"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anstyle = "1.0.11"
time = { version = "0.3", default-features = false, features = ["alloc", "formatting", "local-offset"] }
clap.workspace = true
hex = "0.4"
oo7 = { workspace = true, default-features = true }
rpassword = "7.4.0"
tokio = { workspace = true, features = [ "macros", "rt"] }
