[package]
name = "oo7"
description = "James Bond went on a new mission and this time as a Secret Service provider"
categories.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aes = { version = "0.8", features = ["zeroize"], optional = true }
async-fs = { version = "2.1.0", optional = true }
async-io = { version = "2.2.2", optional = true }
async-lock = { version = "3.2.0", optional = true }
blocking = { version = "1.5.1", optional = true }
cbc = { version = "0.1", features = ["zeroize"], optional = true }
cipher = { version = "0.4", features = [
    "rand_core",
    "zeroize",
], optional = true }
digest = { version = "0.10", optional = true }
futures-lite = { workspace = true, optional = true }
futures-util.workspace = true
hkdf = { version = "0.12", optional = true }
hmac = { version = "0.12", optional = true }
num = "0.4.0"
num-bigint-dig = { version = "0.8", features = ["zeroize"] }
openssl = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", optional = true }
rand = { version = "0.8", default-features = false }
serde.workspace = true
sha2 = { version = "0.10", optional = true }
tokio = { workspace = true, features = [
    "sync",
    "fs",
    "io-util",
], optional = true, default-features = false }
tracing = { workspace = true, optional = true }
zbus.workspace = true
zvariant.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["local_tests", "async-std", "native_crypto"]
# Some tests requires a prompt to be displayed, which can't be easily
# handled in CI unless we write a mock service. The feature allows to disabling those tests in CI
local_tests = []
# Enables unstable low-level API
unstable = []
async-std = [
    "zbus/async-io",
    "dep:async-fs",
    "dep:async-io",
    "dep:async-lock",
    "dep:blocking",
    "dep:futures-lite",
]
tokio = ["zbus/tokio", "dep:tokio"]
native_crypto = [
    "aes",
    "cbc",
    "cipher",
    "digest",
    "hkdf",
    "hmac",
    "pbkdf2",
    "sha2",
]
openssl_crypto = ["openssl"]

[package.metadata.docs.rs]
features = ["unstable"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["tokio"]

[[example]]
name = "basic_2"
path = "examples/basic_2.rs"
required-features = ["tokio"]

[[example]]
name = "dbus_service"
path = "examples/dbus_service.rs"
required-features = ["tokio"]
