[package]
name = "oo7"
description = "James Bond went on a new mission and this time as a Secret Service provider"
categories.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aes = { version = "0.8", features = ["zeroize"], optional = true }
ashpd.workspace = true
async-fs = { version = "2.1.0", optional = true }
async-io = { version = "2.4.0", optional = true }
async-lock = { version = "3.2.0", optional = true }
blocking = { version = "1.5.1", optional = true }
cbc = { version = "0.1", features = ["zeroize"], optional = true }
cipher = { version = "0.4", features = [
    "rand_core",
    "zeroize",
], optional = true }
digest = { version = "0.10", optional = true }
endi.workspace = true
futures-lite = { workspace = true, optional = true }
futures-util.workspace = true
getrandom = "0.2"
hkdf = { version = "0.12", optional = true }
hmac = { version = "0.12", optional = true }
md-5 = { version = "0.10", optional = true }
num = "0.4.0"
num-bigint-dig = { version = "0.8", features = ["zeroize"] }
openssl = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", optional = true }
rand = { version = "0.8", default-features = false }
serde.workspace = true
sha2 = { version = "0.10", optional = true }
subtle = { version = "2.5", optional = true }
tokio = { workspace = true, features = [
    "sync",
    "fs",
    "io-util",
], optional = true, default-features = false }
tracing = { workspace = true, optional = true }
zbus.workspace = true
zvariant.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["local_tests", "tokio", "native_crypto"]
# Some tests requires a prompt to be displayed, which can't be easily
# handled in CI unless we write a mock service. The feature allows to disabling those tests in CI
local_tests = []
# Enables unstable low-level API
unstable = []
async-std = [
    "zbus/async-io",
    "dep:async-fs",
    "dep:async-io",
    "dep:async-lock",
    "dep:blocking",
    "dep:futures-lite",
    "ashpd/async-std",
]
tokio = ["zbus/tokio", "dep:tokio", "ashpd/tokio"]
native_crypto = [
    "dep:aes",
    "dep:cbc",
    "dep:cipher",
    "dep:digest",
    "dep:hkdf",
    "dep:hmac",
    "dep:md-5",
    "dep:pbkdf2",
    "dep:sha2",
    "dep:subtle",
]
openssl_crypto = ["dep:openssl"]
tracing = ["dep:tracing", "ashpd/tracing"]

[package.metadata.docs.rs]
features = ["unstable"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["tokio"]

[[example]]
name = "basic_2"
path = "examples/basic_2.rs"
required-features = ["tokio"]

[[example]]
name = "dbus_service"
path = "examples/dbus_service.rs"
required-features = ["tokio"]
