[package]
name = "oo7-pam"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "PAM module for oo7 Secret Service integration"

[lib]
name = "pam_oo7"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "time"] }
serde = { workspace = true }
serde_repr = "0.1"
zvariant = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-journald = "0.3"
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }
