[package]
name = "oo7-portal"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ashpd = {version = "0.9", git = "https://github.com/bilelmoussaoui/ashpd", features = ["backend", "tracing"]}
clap.workspace = true
oo7.workspace = true
getrandom = "0.2"
serde.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber.workspace = true
zeroize.workspace = true
