[package]
name = "oo7-portal"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ashpd = {workspace = true, features = ["backend", "tracing"]}
clap.workspace = true
oo7 = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true
