[package]
name = "oo7-daemon"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
enumflags2 = "0.7"
hkdf = { version = "0.12", optional = true }
num = "0.4.0"
num-bigint-dig = { version = "0.8", features = ["zeroize"] }
openssl = { version = "0.10", optional = true }
oo7 = { workspace = true, features = ["tokio"] }
rpassword = "7.3"
serde.workspace = true
sha2 = { version = "0.10", optional = true }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
tracing-subscriber.workspace = true
zbus.workspace = true
zeroize.workspace = true

[features]
default = ["native_crypto"]
native_crypto = [
    "dep:hkdf",
    "dep:sha2",
    "oo7/native_crypto"
]
openssl_crypto = [
    "dep:openssl",
    "oo7/openssl_crypto"
]
