[package]
name = "oo7-daemon"
authors = ["Bilal Elmoussaoui", "Dhanuka Warusadura"]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ashpd = {workspace = true, features = ["backend", "tracing"]}
base64 = "0.22"
caps = "0.5"
clap.workspace = true
enumflags2 = "0.7"
formatx = "0.2"
gettext-rs = {version = "0.7", features = ["gettext-system"]}
hkdf = { version = "0.12", optional = true }
libc = "0.2"
nix = { version = "0.30", default-features = false, features = ["user"]}
num = "0.4.0"
num-bigint-dig = { version = "0.8", features = ["zeroize"] }
openssl = { version = "0.10", optional = true }
oo7 = { workspace = true, features = ["tokio"] }
rpassword = "7.4"
serde.workspace = true
serde_repr = "0.1"
sha2 = { version = "0.10", optional = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber.workspace = true
zbus = { workspace = true, features = ["p2p"] }
zeroize.workspace = true

[features]
default = ["native_crypto"]
native_crypto = [
    "dep:hkdf",
    "dep:sha2",
    "oo7/native_crypto"
]
openssl_crypto = [
    "dep:openssl",
    "oo7/openssl_crypto"
]

[dev-dependencies]
serial_test = "3.3"
tempfile.workspace = true